--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -79,7 +79,7 @@ $card-transition: 0.2 ease-in-out;
 	}
 
 	.card__impression {
-		flex: 1 1 auto;
+		flex: 1 1 30%;
 		height: 100%;
 	}
 
