--- a/scss/components/_material-list.scss
+++ b/scss/components/_material-list.scss
@@ -28,6 +28,7 @@ $list-subtext: $grey-3;
 	width: auto;
 	height: 100%;
 	object-fit: cover;
+	overflow: hidden;
 }
 
 .list__information {
